--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>AIVI</title>
   </head>
   <body>
     <nav class="nav-main">
-      <h1 class="heading-white">AIBI CREATIVE</h1>
+      <h1 class="heading-white">SoftPlix</h1>
       <div class="nav-other-items">
         <a href="#what-we-do">What we do</a>
         <a href="#portfolio">Portfolio</a>
@@ -42,7 +42,9 @@
           We are delivering top level digital services with our best experienced
           team, just get started with us.
         </h3>
-        <button>LET'S TALK</button>
+        <a href="#contact-us">
+          <button>LET'S TALK</button>
+        </a>
       </div>
       <img src="src/homepgae_img.png" alt="" />
     </div>
@@ -64,7 +66,7 @@
       <h5 class="heading-yellow">A TRUSTED DIGITAL AGENCY</h5>
       <h1 class="heading-white margin-top">
         Save Time Managing Your Business <br />
-        With Our Best Sevice
+        With Our Best Service
       </h1>
       <div class="what-we-do-items margin-top">
         <div class="what-we-do-item">
@@ -176,7 +178,7 @@
         growth. Join us today and let us help to grow your business.
       </h3>
       <div class="contact-us-form margin-top">
-        <form>
+        <form id="contactForm">
           <!-- <label for="name">Name <span style="color: red">*</span></label> -->
           <input
             type="text"
@@ -225,7 +227,7 @@
     </section>
     <section id="footer">
       <div class="footer-item-1">
-        <h1 class="heading-white margin-top">AIBI CREATIVE</h1>
+        <h1 class="heading-white margin-top">SoftPlix</h1>
         <p class="subheading-for-p line-height margin-top-less">
           &copy; 2024 All rights reserved.
         </p>
@@ -236,30 +238,32 @@
           <img src="src/fb.png" alt="" />
         </div>
       </div>
-      <div class="footer-item-2">
-        <h3 class="heading-h3">MENU</h3>
-        <p class="subheading-for-p line-height margin-top-less">Service</p>
-        <p class="subheading-for-p line-height margin-top-less">Portfolio</p>
-        <p class="subheading-for-p line-height margin-top-less">Testimony</p>
-        <p class="subheading-for-p line-height margin-top-less">About</p>
-      </div>
-      <div class="footer-item-2">
-        <h3 class="heading-h3">SERVICES</h3>
-        <p class="subheading-for-p line-height margin-top-less">Website</p>
-        <p class="subheading-for-p line-height margin-top-less">Mobile App</p>
-        <p class="subheading-for-p line-height margin-top-less">Web App</p>
-        <p class="subheading-for-p line-height margin-top-less">3D</p>
-      </div>
-      <div class="footer-item-2">
-        <h3 class="heading-h3">SUPPORT</h3>
-        <p class="subheading-for-p line-height margin-top-less">
-          Support Center
-        </p>
-        <p class="subheading-for-p line-height margin-top-less">
-          Privacy Policy
-        </p>
-        <p class="subheading-for-p line-height margin-top-less">Contact Us</p>
-        <p class="subheading-for-p line-height margin-top-less">WhatsApp</p>
+      <div class="footer-item-3">
+        <div class="footer-item-2">
+          <h3 class="heading-h3">MENU</h3>
+          <p class="subheading-for-p line-height margin-top-less">Service</p>
+          <p class="subheading-for-p line-height margin-top-less">Portfolio</p>
+          <p class="subheading-for-p line-height margin-top-less">Testimony</p>
+          <p class="subheading-for-p line-height margin-top-less">About</p>
+        </div>
+        <div class="footer-item-2">
+          <h3 class="heading-h3">SERVICES</h3>
+          <p class="subheading-for-p line-height margin-top-less">Website</p>
+          <p class="subheading-for-p line-height margin-top-less">Mobile App</p>
+          <p class="subheading-for-p line-height margin-top-less">Web App</p>
+          <p class="subheading-for-p line-height margin-top-less">3D</p>
+        </div>
+        <div class="footer-item-2">
+          <h3 class="heading-h3">SUPPORT</h3>
+          <p class="subheading-for-p line-height margin-top-less">
+            Support Center
+          </p>
+          <p class="subheading-for-p line-height margin-top-less">
+            Privacy Policy
+          </p>
+          <p class="subheading-for-p line-height margin-top-less">Contact Us</p>
+          <p class="subheading-for-p line-height margin-top-less">WhatsApp</p>
+        </div>
       </div>
     </section>
 
