--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>AIVI</title>
+    <title>SoftPlix</title>
   </head>
   <body>
     <nav class="nav-main">
